--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,7 +6,6 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Content</th>
       <th>Book</th>
       <th colspan="3"></th>
     </tr>
@@ -16,10 +15,10 @@
     <% @notes.each do |note| %>
       <tr>
         <td><%= note.title %></td>
-        <td><%= note.content %></td>
-        <td><%= note.book %></td>
+        <td><%= link_to note.book.title, book_path(note.book) %></td>
         <td><%= link_to 'Show', note %></td>
         <td><%= link_to 'Edit', edit_note_path(note) %></td>
+        <td><%= link_to 'Export', export_note_index_path(note.id), method: :post, target: :_blank  %></td>
         <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
