--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,6 +17,7 @@
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Export', export_book_index_path(book.id), method: :post %></td>
       </tr>
     <% end %>
   </tbody>
