--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,4 +6,5 @@
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
+<%= link_to 'Export', export_book_index_path(@book.id), method: :post %> |
 <%= link_to 'Back', books_path %>
