--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,13 +10,8 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
+  <div class="book-form">
     <%= form.text_field :title %>
-  </div>
-
-  <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
