--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,44 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Books</h1>
+<div class="header">
+  <div class="section-title">
+    <img src=<%=asset_path('amethyst.png')%>>
+    <h1>
+      My books
+      <%= link_to new_book_path, class: "new-book-link" do %>
+        <i class="material-icons">add_circle</i>
+      <% end %>
+    </h1>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Export', export_book_index_path(book.id), method: :post %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Book', new_book_path %>
+<div>
+  <% @books.each do |book| %>
+    <div class="book">
+      <div class="brand" style="background: #<%= Random.bytes(3).unpack1('H*') %>"></div>
+      <h2><%= book.title %></h2>
+      <div class="links-list">
+        <div class="links-pair">
+          <div>
+            <i class="material-icons">visibility</i>
+            <%= link_to 'Show', book %>
+          </div>
+          <div>
+            <i class="material-icons">create</i>
+            <%= link_to 'Edit', edit_book_path(book) %>
+          </div>
+        </div>
+        <div class="links-pair">
+          <div>
+            <i class="material-icons">delete</i>
+            <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+          <div>
+            <i class="material-icons">import_export</i>
+            <%= link_to 'Export', export_book_index_path(book.id), method: :post, target: :_blank %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
