--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Book</h1>
+<div class="section-title">
+  <img src=<%=asset_path('amethyst.png')%>>
+  <h1>Edit book</h1>
+</div>
 
 <%= render 'form', book: @book %>
-
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
