--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,28 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Export', export_book_index_path(@book.id), method: :post %> |
-<%= link_to 'Back', books_path %>
+<div class="book">
+  <div class="brand"></div>
+  <h2><%= @book.title %></h2>
+  <div class="links-list">
+    <div class="links-pair">
+      <div>
+        <i class="material-icons">visibility</i>
+        <%= link_to 'Show', @book %>
+      </div>
+      <div>
+        <i class="material-icons">create</i>
+        <%= link_to 'Edit', edit_book_path(@book) %>
+      </div>
+    </div>
+    <div class="links-pair">
+      <div>
+        <i class="material-icons">delete</i>
+        <%= link_to 'Destroy', @book, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+      <div>
+        <i class="material-icons">import_export</i>
+        <%= link_to 'Export', export_book_index_path(@book.id), method: :post %>
+      </div>
+    </div>
+  </div>
+</div>
