--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Note</h1>
+<div class="section-title">
+  <img src=<%=asset_path('amethyst.png')%>>
+  <h1>New Note</h1>
+</div>
 
 <%= render 'form', note: @note %>
-
-<%= link_to 'Back', notes_path %>
