--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,11 +9,17 @@
     height: 5rem;
   }
 
-  h1 {
+  h2 {
     width: 30%;
     color: #333333;
     padding-bottom: 1rem;
     border-bottom: 2px solid #333333;
+
+    display: flex;
+    align-items: center;
+    a {
+      margin-left: 10px;
+    }
   }
 }
 
