--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Notes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.notepaper{
+  background-color: white;
+  padding: 1rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+  h1 {
+    text-align: center;
+  }
+
+  .align {
+    text-align: center;
+  }
+
+  .actions {
+    display: flex;
+    justify-content: center;
+    a {
+      margin: 0 1rem;
+      cursor: pointer;
+      text-align: center;
+    }
+  }
+}
+
+.notepaper:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.notepaper-container {
+  width: 60%;
+  margin: 0 auto;
+
+  & > div {
+    margin: 1rem;
+  }
+}
