--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,30 +1,44 @@
-<p id="notice"><%= notice %></p>
+<div class="header">
+  <div class="section-title">
+    <img src=<%=asset_path('amethyst.png')%>>
+    <h2>
+      My notes
+      <%= link_to new_note_path, class: "new-book-link" do %>
+        <i class="material-icons">add_circle</i>
+      <% end %>
+    </h2>
+  </div>
+</div>
 
-<h1>Notes</h1>
+<div class="notepaper-container">
+  <% @notes.each do |note| %>
+      <div>
+        <div class="notepaper">
+          <h1 class="align">
+            <%= note.title %> <i>de <%= link_to note.book.title, book_path(note.book) %></i>
+          </h1>
+        </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Book</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <div class="notepaper">
+          <%= sanitize GitHub::Markup.render_s(GitHub::Markups::MARKUP_MARKDOWN, note.content) %>
+        </div>
 
-  <tbody>
-    <% @notes.each do |note| %>
-      <tr>
-        <td><%= note.title %></td>
-        <td><%= link_to note.book.title, book_path(note.book) %></td>
-        <td><%= link_to 'Show', note %></td>
-        <td><%= link_to 'Edit', edit_note_path(note) %></td>
-        <td><%= link_to 'Export', export_note_index_path(note.id), method: :post, target: :_blank  %></td>
-        <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Note', new_note_path %>
+        <div class="notepaper">
+          <div class="actions">
+            <%= link_to edit_note_path(note) do %>
+              <i class="material-icons">create</i>
+            <% end %>
+            <%= link_to export_note_index_path(note.id), method: :post, target: :_blank  do %>
+              <i class="material-icons">import_export</i>
+            <% end %>
+            <%= link_to note do %>
+              <i class="material-icons">visibility</i>
+            <% end %>
+            <%= link_to note, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <i class="material-icons">delete</i>
+            <% end %>
+          </div>
+        </div>
+      </div>
+  <% end %>
+</div>
