--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 
     <p id="notice"><%= notice %></p>
     <p id="alert"><%= alert %></p>
+    <p id="error"><%= flash.discard(:error) %></p>
     <%= yield %>
   </body>
 </html>
